[package]

name = "rdm"
description = "A command-line redmine client"
version = "0.0.1"
authors = ["Renato Zannon <renato@rrsz.com.br>"]

[dependencies]
docopt = "*"
# json_macros = "*"
rustc-serialize = "*"
url = "*"
time = "*"
log = "*"
env_logger = "*"
uuid = "*"
hyper = "*"

[profile.dev]
debug = false
